Developed main-page

--- a/Lesson_1_2_3/index.html
+++ b/Lesson_1_2_3/index.html
@@ -12,6 +12,11 @@
     <header>
         <h1>Header 2</h1>
     </header>
+    <main>
+        <span>
+            Main page
+        </span>
+    </main>
 </body>
 
 </html>
