Age control for feature/user-access

--- a/Lesson_1_2_3/index.html
+++ b/Lesson_1_2_3/index.html
@@ -17,6 +17,11 @@
             Main page
         </span>
     </main>
+    <footer>
+        <span>
+            Footer
+        </span>
+    </footer>
 </body>
 
 </html>
