Some changes of branck main

--- a/Lesson_1_2_3/index.html
+++ b/Lesson_1_2_3/index.html
@@ -10,13 +10,8 @@
 
 <body>
     <header>
-        <h1>Header 2</h1>
+        <h1>Main Header 2</h1>
     </header>
-    <main>
-        <span>
-            Main page
-        </span>
-    </main>
 </body>
 
 </html>
